# maplibre-jupyterlite

./: README.md  pyproject.toml  requirements.txt
content/: maplibre.ipynb  openfreemap.ipynb
content/experimental/: spin_globe.ipynb
