[project]
name = "maplibre-jupyterlite"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anywidget>=0.9.18",
    "jupyterlab~=4.3.6",
    "jupyterlab-widgets==3.0.13",
    "jupyterlite-core==0.5.1",
    "jupyterlite-pyodide-kernel==0.5.2",
    "maplibre[anywidget]>=0.3.1",
    "notebook~=7.3.3",
]
